RESOLVED FIXED12487
REGRESSION: Repro crash when a second background image is animated
https://bugs.webkit.org/show_bug.cgi?id=12487
Summary REGRESSION: Repro crash when a second background image is animated
mitz
Reported 2007-01-30 14:01:19 PST
I noticed that RenderObject registers as a client of all its background images but unregisters only from the first one. This makes it leak, and in the case of an animated image, also crash (since the image tries to notified the deleted object of changes). Test case coming up.
Attachments
Test case (will crash when closed) (336 bytes, text/html)
2007-01-30 14:02 PST, mitz
no flags
Deref() all background images and the border image (7.58 KB, patch)
2007-01-30 14:48 PST, mitz
darin: review+
Landable version (7.67 KB, patch)
2007-01-30 15:07 PST, mitz
no flags
mitz
Comment 1 2007-01-30 14:02:35 PST
Created attachment 12811 [details] Test case (will crash when closed)
mitz
Comment 2 2007-01-30 14:48:39 PST
Created attachment 12813 [details] Deref() all background images and the border image
Darin Adler
Comment 3 2007-01-30 15:01:13 PST
Comment on attachment 12813 [details] Deref() all background images and the border image r=me + if (CachedImage* backgroundImage = bgLayer->backgroundImage()) + backgroundImage->deref(this); Indented wrong -- needs more spaces.
mitz
Comment 4 2007-01-30 15:07:33 PST
Created attachment 12814 [details] Landable version Fixed wrong directory name and indentation (and braces).
Sam Weinig
Comment 5 2007-01-30 15:21:48 PST
Landed in r19273.
Note You need to log in before you can comment on or make changes to this bug.