LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12487
          REGRESSION: Repro crash when a second background image is animated

        * fast/images/animated-background-image-crash-expected.txt: Added.
        * fast/images/animated-background-image-crash.html: Added.
        * fast/images/resources/animated.gif: Added.
        * fast/images/resources/animated2.gif: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12487
          REGRESSION: Repro crash when a second background image is animated

        Test: fast/images/animated-background-image-crash.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::arenaDelete): Deref() all background images and the
        border image.



Canonical link: https://commits.webkit.org/16215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19273 268f45cc-cd09-0410-ab3c-d52691b4dbfc