WebCore/rendering/RenderObject.cpp
@@ -2471,10 +2471,17 @@ void RenderObject::destroy()
 
 void RenderObject::arenaDelete(RenderArena* arena, void* base)
 {
-    if (m_style->backgroundImage())
-        m_style->backgroundImage()->deref(this);
-    if (m_style)
+    if (m_style) {
+        for (const BackgroundLayer* bgLayer = m_style->backgroundLayers(); bgLayer; bgLayer = bgLayer->next()) {
+            if (CachedImage* backgroundImage = bgLayer->backgroundImage())
+                backgroundImage->deref(this);
+        }
+
+        if (CachedImage* borderImage = m_style->borderImage().image())
+            borderImage->deref(this);
+
         m_style->deref(arena);
+    }
 
 #ifndef NDEBUG
     void* savedBase = baseOfRenderObjectBeingDeleted;
